--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,19 @@
-name: Java Docker CI
+name: Java Docker CI-CD
 
 on:
   push:
     branches: [ main ]
 
 jobs:
-  build:
+  build-deploy:
     runs-on: ubuntu-latest
 
     steps:
+
       - name: Checkout code
         uses: actions/checkout@v4
+
+      # ---------------- JAVA BUILD ----------------
 
       - name: Setup Java
         uses: actions/setup-java@v4
@@ -18,14 +21,38 @@ jobs:
           distribution: temurin
           java-version: 17
 
-      - name: Build with Maven
+      - name: Build JAR
         run: mvn clean package -DskipTests
 
-      - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/hello-k8s:${{ github.run_number }} .
+      # ---------------- DOCKER BUILD ----------------
 
-      - name: Login to Docker Hub
-        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+      - name: Login Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: Push Docker image
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/hello-k8s:${{ github.run_number }}
+      - name: Build image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/hello-k8s:${{ github.run_number }} .
+
+      - name: Push image
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/hello-k8s:${{ github.run_number }}
+
+      # ---------------- K8S CD ----------------
+
+      - name: Setup kubectl
+        uses: azure/setup-kubectl@v4
+
+      - name: Setup Helm
+        uses: azure/setup-helm@v4
+
+      - name: Configure kubeconfig
+        run: |
+          mkdir -p $HOME/.kube
+          echo "${{ secrets.KUBE_CONFIG }}" > $HOME/.kube/config
+
+      - name: Deploy with Helm
+        run: |
+          helm upgrade --install hello-release ./hello-chart \
+          --set image.repository=${{ secrets.DOCKER_USERNAME }}/hello-k8s \
+          --set image.tag=${{ github.run_number }}
