--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,9 @@ jobs:
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
+
       - name: Build image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/hello-k8s:${{ github.run_number }} .
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/hello-k8s:${{ github.run_number }}
 
       - name: Push image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/hello-k8s:${{ github.run_number }}
