--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,11 +30,14 @@ jobs:
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
 
+  # Build image
       - name: Build image
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/hello-k8s:${{ github.run_number }} .
+
+  # Push image
+      - name: Push image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/hello-k8s:${{ github.run_number }}
 
-      - name: Push image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/hello-k8s:${{ github.run_number }}
 
       # ---------------- K8S CD ----------------
 
