adding pipeline to local runner

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
           java-version: 17
 
       - name: Build JAR
-        run: mvn clean package -DskipTests
+        run: ./mvnw.cmd clean package -DskipTests
 
       # ---------------- DOCKER BUILD ----------------
 
